src/containers/App.css
::selection {
  background: rgba(255, 126, 126, 0.6);
}

html, body {
    overflow-x: hidden; 
    overflow-y: hidden;
    overflow: hidden;
}

body {
 position: relative;
}

.App {
  text-align: center;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  color: #222;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.App-header {
  background: url(../assets/uwu-bg.png);
  background-repeat: repeat;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: #222222;
}

.App-link {
  color: #61dafb;
}

.clickable {
  cursor: pointer;
}

a{
  color: #61dafb;
}

/* FLEX */
.flex-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.main {
  flex: 1 0 0;
  min-width: 50vw;
  text-align: center;
}

.drink {
  flex: 2 0 0;
  min-width: 50vw;
  text-align: center;
}

@media screen and (max-width: 600px){
  .flex-container {
    -webkit-flex-direction: column;
    flex-direction: column;
  }
}

/* END FLEX */

/* LEFT SIDE */
.main-header { 
  font-size: 36px;  
  font-weight: 900;
  text-align: center;
}

#weOutDiv {
  display: none;
}

#tryAgain {
  display: none;
  color: #999999;
}

.we-out {
  font-size: 36px;
  font-weight: 600;
  max-height: 175px;
  min-height: 175px;
}

.we-out > p {
  margin-bottom: 10px;
  margin-top: 0;
}

#locationRef {
  display: block;
  font-size: 12px;
  font-weight: 300;
  margin: 0;
}

#yelpRating {
  display: inline;
}

#reviewCount {
  font-size: 17px;
  margin-left: 20px;
  margin-top:-20px;
  display: inline;

}

#shopNameContainer {
  color: #222;
}

.input-form {
    border: 3px solid #222222;  
    border-radius: 3px;
    padding: 15px;
    width: 320px;
    font-size: 14px;
}

#errorText {
  font-size: 16px;
  color: rgb(255, 126, 126);
}

.brown-btn { 
  width: 261px; 
  border: none;
  border-radius: 50px;  
  background-color: #544C45;
  font-size: 20px;
  padding: 15px 0 15px 0;
  color: white;
  font-weight: 600;
}

.brown-btn:focus {
  outline: none;
}

.under-btn {
  font-size: 16px;
  text-decoration: underline;
  margin-top: 4px;
}

#history-title {
  display: none;
  font-size: 16px;
  margin-top: 20px;
  margin-bottom: 0px;
}

.history {
  color: #999999;
  padding-left: 5px;
  padding-right: 5px;
  font-size: 16px;
  text-decoration: underline;
}

@media screen and (max-width: 600px){
  .main {
    position: absolute;
    z-index: 2;
    top: 50px;
    max-width: 90%;
  }

  .we-out {
    min-height: 200px;
    min-width: 90%;
  }

  .input-form {
    max-width: 90%;
  }
}

/* END LEFT SIDE */

/* RIGHT SIDE */
.boba {
   height: 100vh;
}


/* Chrome 29+ */
@media screen and (-webkit-min-device-pixel-ratio:0)
  and (min-resolution:.001dpcm) {
    .move-boba {
      transform: translate(0px, -18px);
      offset-path: path('M51.5333333,415.337838 L188.5,2.95578557');
      offset-distance: 0%;
      animation: drink-boba 1s ease;
    }

    @keyframes drink-boba {
      from {
        offset-distance: 0%;
      }
      to {
        offset-distance: 100%;
      }
    } 
}


@media screen and (max-width: 600px){
  .main {
    position: absolute;
    z-index: 2;
    top: 50px;
    max-width: 90%;
  }
  .drink {
    text-align: center;
    width: 10%;
    max-height: 50vh;
    bottom: 0;
    position: absolute;
    display: none;
  }
  .boba {
    z-index: 1;
    height: 410px;
    width: 30%;
    margin-left: 50%;
  }
}

